--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal_assets",
+  "name": "linkkk_personal_assets",
   "version": "1.0.0",
   "description": "个人静态资源库",
   "main": "index.js",
